<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="320dp"
        android:background="@color/background"
        android:orientation="vertical">


    <TextView

            android:layout_width="wrap_content"
              android:text="@string/account_delete_dialog"
            android:layout_margin="32dp"
              android:textSize="25dp"

              android:textColor="#FFFFFF"

                android:layout_gravity="center"
              android:gravity="center"
            android:background="@drawable/edge2"
            android:fontFamily="@font/bmjua"
              android:layout_height="50"/>


    <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

        <TextView
                android:id="@+id/delete_yes"
                android:layout_width="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/yes"
                  android:textSize="20dp"
                  android:textColor="#220922"
                  android:textStyle="bold"
                  android:gravity="center"
                  android:padding="12dp"
                  android:layout_gravity="center"
                  android:layout_margin="16dp"
                android:fontFamily="@font/bmjua"
                  android:background="@drawable/button_background"
                  android:layout_height="wrap_content"/>

        <TextView
                  android:id="@+id/delete_no"
                  android:layout_width="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/no"
                  android:textSize="20dp"
                  android:textColor="#220922"
                  android:textStyle="bold"
                  android:gravity="center"
                  android:layout_margin="16dp"
                  android:padding="12dp"
                  android:fontFamily="@font/bmjua"
                  android:background="@drawable/button_background"
                  android:layout_height="wrap_content"
                 android:layout_gravity="center"/>


    </LinearLayout>


</LinearLayout>