<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AccountSettingActivity">

    <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                  android:background="@color/white"
                    android:orientation="horizontal">

        <ImageView
                android:id="@+id/account_setting_back"
                android:layout_width="50dp"
                   android:layout_height="50dp"
                    android:src="@drawable/icons8_left_52"/>


        <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setting"
                android:layout_marginRight="55dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16dp"
                android:fontFamily="@font/bmjua"
                android:textStyle="bold"
                android:textColor="#2386D6"/>

    </LinearLayout>

       <LinearLayout android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/background"

                        android:orientation="vertical">

        <TextView
                android:id="@+id/account_setting_logout"
                android:layout_width="match_parent"
                    android:gravity="center"
                android:background="@drawable/edge"
                android:fontFamily="@font/bmjua"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"

                  android:textStyle="bold"
                  android:text="@string/logout"
                  android:textSize="16dp"
                  android:layout_height="48dp"/>

        <TextView
                android:id="@+id/account_setting_delete"
                android:layout_width="match_parent"
                android:gravity="center"
                android:fontFamily="@font/bmjua"
                android:background="@drawable/edge"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:text="@string/account_delete"
                android:textSize="16dp"
                android:layout_height="48dp"/>
       </LinearLayout>

</LinearLayout>